# RTXplore

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/processed/: GreenRocks.dds  Rocks.Array.Diffuse.dds  Rocks.Array.Disp.dds  Rocks.Array.Normal.dds  SandDiffuse.dds  SkyBox.dds  Terrain.Array.Diffuse.dds  Terrain.Array.Disp.dds  Terrain.Array.Normal.dds  Water.Disp.dds  Water.Normal.dds
cmake/: CustomPresets.json
cmake/utils/: ShaderCompilerDiscovery.cmake
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/include/engine/core/: ChronoTimer.hpp  CustomException.hpp  DX_Exceptions.hpp  DxgiInfoManager.hpp  Exceptions.hpp  GraphicsThrowMacros.hpp  Settings.hpp  TickTimer.hpp  Timer.hpp  Utilities.hpp  WinInclude.hpp  WindowsThrowMacros.hpp  customException.hpp  winCPUTickTimer.hpp
engine/core/src/: ChronoTimer.cpp  CustomException.cpp  DX_Exceptions.cpp  DxgiInfoManager.cpp  Exceptions.cpp  Settings.cpp  TickTimer.cpp  Utilities.cpp  customException.cpp  winCPUTickTimer.cpp
engine/gfx/: CMakeLists.txt
engine/gfx/include/engine/gfx/: AccelerationStructures.hpp  Camera.hpp  CameraController.hpp  Context.hpp  DX_GPUBuffers.hpp  DX_RayTracingUtils.hpp  DX_ShaderTable.hpp  DX_ShadersManager.hpp  DynamicCubeMap.hpp  FrameResources.hpp  GPUBuffers.hpp  GeometryGenerator.hpp  GeometryHelper.hpp  GeometryRenderer.hpp  Graphics.hpp  GraphicsResources.hpp  HlslUtils.h  LightSource.hpp  MaterialManager.hpp  Mesh.hpp  Object.hpp  ObjectRenderer.hpp  PSO.hpp  PSO_Loader.hpp  PSO_Manager.hpp  PipelineState.hpp  PipelineStateLoader.hpp  PipelineStateManager.hpp  RS.hpp  RS_Manager.hpp  RasterizationGraphics.hpp  RayTracingGraphics.hpp  RayTracingUtils.hpp  RootSignature.hpp  RootSignatureManager.hpp  ShaderTable.hpp  ShadersManager.hpp  ShadowMap.hpp  SkyBoxRenderer.hpp  TerrainRenderer.hpp  (+6 more)
engine/gfx/src/: AccelerationStructures.cpp  CameraController.cpp  Context.cpp  DX_AccelerationStructures.cpp  DX_FrameResources.cpp  DX_GPUBuffers.cpp  DX_PSO_Loader.cpp  DX_Utilities.cpp  DynamicCubeMap.cpp  FrameResources.cpp  GPUBuffers.cpp  GeometryGenerator.cpp  GeometryHelper.cpp  GeometryRenderer.cpp  GraphicsResources.cpp  LightSource.cpp  MaterialManager.cpp  Object.cpp  ObjectRenderer.cpp  PSO.cpp  PSO_Loader.cpp  PipelineState.cpp  PipelineStateLoader.cpp  RS.cpp  RS_Manager.cpp  RasterizationGraphics.cpp  RayTracingGraphics.cpp  RootSignature.cpp  RootSignatureManager.cpp  ShadersManager.cpp  ShadowMap.cpp  SkyBoxRenderer.cpp  TerrainRenderer.cpp  Texture.cpp  TextureManager.cpp  TextureRenderer.cpp  Utilities.cpp  WaterRenderer.cpp
engine/math/: CMakeLists.txt
engine/math/include/engine/math/: AxisAllignedBBox.hpp  BoundingPlane.h  Color.hpp  Common.hpp  Frustum.hpp  Matrix3.hpp  Matrix4.hpp  OrientedBBox.hpp  Quaternion.hpp  Scalar.hpp  SimplexNoise.hpp  Vector.hpp  VectorUtils.hpp
engine/math/src/: AABB.cpp  Color.cpp  Frustum.cpp  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  SimplexNoise.cpp  VectorUtils.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/engine/platform/: Keyboard.hpp  Mouse.hpp  Window.hpp
engine/platform/src/: Keyboard.cpp  Mouse.cpp  Window.cpp
engine/shaders/: Default.RT.hlsl  Default.hlsl  LightingUtils.hlsl  RasterizationHelper.hlsl  RayTracingHelper.hlsl  Shadow.hlsl  SkyBox.hlsl  Terrain.hlsl  TextureRender.hlsl  Water.hlsl  Waves.CS.hlsl
runtime/: CMakeLists.txt
runtime/sampleapp/: CMakeLists.txt
runtime/sampleapp/src/: App.cpp  App.hpp  WinMain.cpp
runtime/sandbox/: CMakeLists.txt
runtime/sandbox/src/: App.cpp  App.hpp  WinMain.cpp
tools/: convertTextures.bat  namespace_wrap.py  namespace_wrap_cpp.py  reset_gfx_namespaces.py
tools/vscode/: launch.json  settings.json  tasks.json
